feat: handle albums; handle artists
