# src/modules/artist/artist.entity.ts
@@ -20,10 +20,4 @@ export class ArtistEntity extends BaseEntity {
     default: false,
   })
   grammy: boolean;
-
-  @OneToMany(() => AlbumEntity, (album) => album.artist, {
-    onDelete: 'SET NULL',
-    onUpdate: 'CASCADE',
-  })
-  albums: AlbumEntity[];
 }
